
 - The top-level 'version' entry in META.yml files we'd generated was
   in the wrong format (it was being treated as a version.pm object
   rather than a serialized copy) due to a weird YAML::Node issue.
   Fixed.

 - Don't 'use base qw(version)' anymore in our M::B::Version wrapper,
   just set @ISA directly, because some people have reported that the
   'use base' line is croaking.

0.2804  Sun Jul 16 16:41:25 CDT 2006

 - Added 'use version;' in Module::Build::Version, because some
   versions of base.pm won't automatically load version.pm when we do
   'use base qw/version/;'. [Spotted by Erik Tank]

0.2803  Sat Jul 15 08:26:34 CDT 2006

 - The META.yml file in the last release was all screwed up, so the
   distribution wasn't indexed properly.  Fixed in this release.

0.2802  Fri Jul 14 22:40:34 CDT 2006

 - Added reliance on version.pm, which means we should deal much
   better with the wide range of version specifications one finds on
   CPAN.  This is made possible by recent releases of version.pm that
   give the user a pure-perl option, so installing version.pm
   shouldn't be too onerous for most users.  [John Peacock]

 - We should be accepting the default when we're in unattended mode,
   not acting dumb and ignoring both the default and the [empty]
   answer from the user.  Fixed.  [Spotted by Nik Clayton]

0.2801  Sun May 21 00:07:40 CDT 2006

 - Module::Build::Compat's emulation of INC is incorrectly prepending
   a -I to the value of INC. This is incorrect because there should
   already be a -I on the value. I.E. it's "perl Makefile.PL INC=-Ifoo"
   not "perl Makefile.PL INC=foo" so Compat should not prefix a -I.
   [Michael Schwern]

 - Native batch scripts under Windows should not be converted by
   pl2bat. [Spotted by Ron Savage]

 - Tweaked the way we determine whether a file is executable on Unix.
   We use this determination to decide whether to make it executable
   during installation. [Julian Mehnle]
